--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
 
             <!-- Floating hero logo -->
             <div class="hero-logo">
-              <img src="images/Emblem Logo for Datastasis AI - Brain Circuit.svg" alt="Datastasis AI Logo" class="floating-logo" />
+              <img src="images/4.svg" alt="Datastasis AI Logo" class="floating-logo" />
             </div>
 
           </div>
