--- a/index.html
+++ b/index.html
@@ -418,7 +418,8 @@
       content: "";
       position: absolute;
       left: 0; right: 0;
-      top: calc(50% - 2px);
+      top: 50%;
+      transform: translateY(-50%);
       height: 4px;
       background: linear-gradient(135deg, rgba(100, 255, 218, .25), rgba(0, 217, 179, .25));
       border-radius: 4px;
