--- a/index.html
+++ b/index.html
@@ -951,17 +951,27 @@
               <div data-lang="en">
                 <div class="tagline">Engineering Intelligent Systems</div>
                 <h1>From Data to<br><span class="gradient-text">Deployment</span></h1>
-                <p>
-                  We are a team of experts in <strong>Data Analytics</strong>, <strong>Artificial Intelligence</strong>, and <strong>Machine Learning</strong>, dedicated to helping companies transform data into measurable business outcomes.
-                </p>
-                <p>
-                  By combining <strong>data science</strong>, <strong>process automation</strong>, and <strong>AI-driven innovation</strong>, we design intelligent systems that optimize operations, reduce costs, and uncover new growth opportunities.
-                </p>
-                <p>
-                  Our solutions are built on <strong>modern cloud technologies</strong>, ensuring scalability, security, and rapid deployment across diverse business environments.
-                </p>
-                <p>
-                  Our mission is simple — <strong>to give data meaning that drives business success.</strong>
+                <div class="hero-highlights">
+                  <div class="highlight-item">
+                    <i class="fas fa-check-circle"></i>
+                    <span>Experts in <strong>Data Analytics, AI & Machine Learning</strong></span>
+                  </div>
+                  <div class="highlight-item">
+                    <i class="fas fa-check-circle"></i>
+                    <span>Transform data into <strong>measurable business outcomes</strong></span>
+                  </div>
+                  <div class="highlight-item">
+                    <i class="fas fa-check-circle"></i>
+                    <span>Optimize operations, reduce costs, uncover <strong>growth opportunities</strong></span>
+                  </div>
+                  <div class="highlight-item">
+                    <i class="fas fa-check-circle"></i>
+                    <span>Built on <strong>modern cloud technologies</strong></span>
+                  </div>
+                </div>
+
+                <p class="mission-statement">
+                  Our mission: <strong>Give data meaning that drives business success.</strong>
                 </p>
                 <div class="hero-buttons">
                   <a href="#expertise" class="button primary">Explore Our Expertise</a>
