--- a/index.html
+++ b/index.html
@@ -333,7 +333,7 @@
     }
 
     .mission-text {
-      font-size: 1.5rem;
+      font-size: 2rem;
       font-weight: 600;
       color: #ffffff;
       margin: 0;
@@ -999,7 +999,7 @@
 
                 <div class="mission-box">
                   <span class="mission-label">Our Mission</span>
-                  <p class="mission-text">"Give data meaning that drives business success"</p>
+                  <p class="mission-text">Give data meaning that drives business success</p>
                 </div>
 
                 <div class="hero-buttons">
