--- a/index.html
+++ b/index.html
@@ -996,7 +996,7 @@
               <!-- English Content -->
               <div data-lang="en">
                 <div class="tagline">Engineering Intelligent Systems</div>
-                <h1>From Data to<br><span class="gradient-text">Deployment</span></h1>
+                <h1>From Data to <span class="gradient-text">Deployment</span></h1>
                 
                 <p>
                   We are a team of experts in <strong>Data Analytics</strong>, <strong>Artificial Intelligence</strong>, and <strong>Machine Learning</strong>, dedicated to helping companies transform data into measurable business outcomes.
