--- a/index.html
+++ b/index.html
@@ -1040,6 +1040,7 @@
           <p data-lang="en">Comprehensive AI/ML capabilities from research to production</p>
         </div>
         <div class="expertise-grid">
+
           <div class="expertise-card">
             <i class="fas fa-brain" aria-hidden="true"></i>
             <h3 data-lang="sr" class="active">Mašinsko Učenje i AI</h3>
@@ -1057,6 +1058,7 @@
               <li>Model evaluation & selection</li>
             </ul>
           </div>
+
           <div class="expertise-card">
             <i class="fas fa-cloud-upload-alt" aria-hidden="true"></i>
             <h3 data-lang="sr" class="active">MLOps i Cloud</h3>
@@ -1074,6 +1076,7 @@
               <li>GCP / Azure / AWS deployment</li>
             </ul>
           </div>
+
           <div class="expertise-card">
             <i class="fas fa-robot" aria-hidden="true"></i>
             <h3 data-lang="sr" class="active">LLMOps i Agenti</h3>
@@ -1091,6 +1094,7 @@
               <li>Fine-tuning open models</li>
             </ul>
           </div>
+
           <div class="expertise-card">
             <i class="fas fa-chart-line" aria-hidden="true"></i>
             <h3 data-lang="sr" class="active">Data Science</h3>
@@ -1108,6 +1112,45 @@
               <li>Data storytelling</li>
             </ul>
           </div>
+
+          <!-- NEW Expertise Card: Data Engineering -->
+          <div class="expertise-card">
+            <i class="fas fa-database" aria-hidden="true"></i>
+            <h3 data-lang="sr" class="active">Data Engineering</h3>
+            <h3 data-lang="en">Data Engineering</h3>
+            <ul data-lang="sr" class="active">
+              <li>ETL/ELT pipeline dizajn</li>
+              <li>Data warehouse & lake arhitekture</li>
+              <li>Streaming data obrada</li>
+              <li>Optimizacija podataka</li>
+            </ul>
+            <ul data-lang="en">
+              <li>ETL/ELT pipeline design</li>
+              <li>Data warehouse & lake architecture</li>
+              <li>Streaming data processing</li>
+              <li>Data optimization</li>
+            </ul>
+          </div>
+
+          <!-- NEW Expertise Card: AI Governance -->
+          <div class="expertise-card">
+            <i class="fas fa-shield-alt" aria-hidden="true"></i>
+            <h3 data-lang="sr" class="active">AI Governance & Sigurnost</h3>
+            <h3 data-lang="en">AI Governance & Security</h3>
+            <ul data-lang="sr" class="active">
+              <li>Model monitoring & compliance</li>
+              <li>Bias detekcija i ublažavanje</li>
+              <li>Objašnjivost modela (XAI)</li>
+              <li>Data privacy & zaštita</li>
+            </ul>
+            <ul data-lang="en">
+              <li>Model monitoring & compliance</li>
+              <li>Bias detection & mitigation</li>
+              <li>Model explainability (XAI)</li>
+              <li>Data privacy & security</li>
+            </ul>
+          </div>
+
         </div>
       </div>
     </section>
@@ -1134,6 +1177,8 @@
           <div class="tech-item"><i class="fas fa-project-diagram tech-icon" aria-hidden="true"></i><span>Airflow</span></div>
           <div class="tech-item"><i class="fas fa-code-branch tech-icon" aria-hidden="true"></i><span>Git</span></div>
           <div class="tech-item"><i class="fas fa-cube tech-icon" aria-hidden="true"></i><span>Kubernetes</span></div>
+          <div class="tech-item"><i class="fas fa-stream tech-icon" aria-hidden="true"></i><span>Apache Kafka</span></div>
+          <div class="tech-item"><i class="fas fa-bolt tech-icon" aria-hidden="true"></i><span>Apache Spark</span></div>
         </div>
       </div>
     </section>
@@ -1456,8 +1501,8 @@
             <h2 data-lang="en">Let's Build Something <span class="gradient-text">Intelligent</span></h2>
             <p data-lang="sr" class="active">Tražite AI/ML rešenja ili mogućnosti za saradnju? Strastveni smo u rešavanju složenih problema sa inteligentnim sistemima.</p>
             <p data-lang="en">Looking for AI/ML solutions or collaboration opportunities? We're passionate about solving complex problems with intelligent systems.</p>
-            <a href="datastasis.ai@gmail.com" class="button primary" data-lang-inline="sr" class="active">Kontaktirajte Nas</a>
-            <a href="datastasis.ai@gmail.com" class="button primary" data-lang-inline="en">Get In Touch</a>
+            <a href="mailto:datastasis.ai@gmail.com" class="button primary" data-lang-inline="sr" class="active">Kontaktirajte Nas</a>
+            <a href="mailto:datastasis.ai@gmail.com" class="button primary" data-lang-inline="en">Get In Touch</a>
           </div>
           <div class="footer-links">
             <h3 data-lang="sr" class="active">Povežite Se</h3>
@@ -1466,7 +1511,7 @@
               <a href="https://github.com/datastasisai" aria-label="GitHub" target="_blank" rel="noopener noreferrer"><i class="fab fa-github" aria-hidden="true"></i></a>
               <a href="https://linkedin.com" aria-label="LinkedIn" target="_blank" rel="noopener noreferrer"><i class="fab fa-linkedin-in" aria-hidden="true"></i></a>
               <a href="https://twitter.com" aria-label="Twitter" target="_blank" rel="noopener noreferrer"><i class="fab fa-twitter" aria-hidden="true"></i></a>
-              <a href="datastasis.ai@gmail.com" aria-label="Email"><i class="fas fa-envelope" aria-hidden="true"></i></a>
+              <a href="mailto:datastasis.ai@gmail.com" aria-label="Email"><i class="fas fa-envelope" aria-hidden="true"></i></a>
             </div>
             <div>
               <h4 style="font-size: 1rem; margin-bottom: 1rem;" data-lang="sr" class="active">Brzi Linkovi</h4>
