--- a/index.html
+++ b/index.html
@@ -345,7 +345,7 @@
               <!-- Serbian -->
               <div data-lang="sr" class="active">
                 <div class="tagline">Inženjering Inteligentnih Sistema</div>
-                <h1>Od Podataka do<br><span class="gradient-text">Produkcije</span></h1>
+                <h1>Od Podataka do<span class="gradient-text">Produkcije</span></h1>
 
                 <p>Mi smo tim eksperata za <strong>Analitiku Podataka</strong>, <strong>Veštačku Inteligenciju</strong> i <strong>Mašinsko Učenje</strong>, posvećeni pomaganju kompanijama da transformišu podatke u merljive poslovne rezultate.</p>
                 <p>Kombinujući <strong>data science</strong>, <strong>automatizaciju procesa</strong> i <strong>AI inovacije</strong>, dizajniramo inteligentne sisteme koji optimizuju operacije, smanjuju troškove i otkrivaju nove mogućnosti za rast.</p>
@@ -365,7 +365,7 @@
               <!-- English -->
               <div data-lang="en">
                 <div class="tagline">Engineering Intelligent Systems</div>
-                <h1>From Data to<br><span class="gradient-text">Deployment</span></h1>
+                <h1>From Data to<span class="gradient-text">Deployment</span></h1>
 
                 <p>We are a team of experts in <strong>Data Analytics</strong>, <strong>Artificial Intelligence</strong>, and <strong>Machine Learning</strong>, dedicated to helping companies transform data into measurable business outcomes.</p>
                 <p>By combining <strong>data science</strong>, <strong>process automation</strong>, and <strong>AI-driven innovation</strong>, we design intelligent systems that optimize operations, reduce costs, and uncover new growth opportunities.</p>
