--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="sr">
 <head>
-  <title>Datastasis AI - Inženjering Inteligentnih Sistema</title>
+  <title>Datastasis AI - Inženjering inteligentnih sistema</title>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
   <meta name="description" content="ML & AI inženjeri koji grade inteligentne, skalabilne sisteme — od MLOps pipeline-a do generativnih AI aplikacija.">
@@ -803,7 +803,7 @@
             <h2 data-lang="en">Let's Build Something <span class="gradient-text">Intelligent</span></h2>
             <p class="active" data-lang="sr">Tražite AI/ML rešenja ili mogućnosti za saradnju? Strastveni smo u rešavanju složenih problema inteligentnim sistemima.</p>
             <p data-lang="en">Looking for AI/ML solutions or collaboration opportunities? We're passionate about solving complex problems with intelligent systems.</p>
-            <a href="mailto:datastasis.ai@gmail.com" class="button primary active" data-lang-inline="sr">Kontaktirajte Nas</a>
+            <a href="mailto:datastasis.ai@gmail.com" class="button primary active" data-lang-inline="sr">Kontaktirajte nas</a>
             <a href="mailto:datastasis.ai@gmail.com" class="button primary" data-lang-inline="en">Get In Touch</a>
           </div>
 
