--- a/index.html
+++ b/index.html
@@ -594,8 +594,8 @@
             <h3 data-lang="sr" class="active">Inteligentni pipeline za obradu dokumenata</h3>
             <h3 data-lang="en">Intelligent Document Processing Pipeline</h3>
             <p data-lang="sr" class="active">
-              Sistem automatski čita i razvrstava fakture, ugovore i druge dokumente, te izvlači bitne podatke bez ručnog unosa.
-              Rezultat: brža obrada, manje grešaka i niži troškovi administracije.
+              Sistem automatski čita i razvrstava fakture, ugovore i druge dokumente, te izvlači bitne podatke bez ručnog unosa. 
+              Rezultat: brža obrada, manje grešaka i manji troškovi administracije.
             </p>
             <p data-lang="en">End-to-end MLOps pipeline for document classification and extraction using transformer models. Deployed on GCP with automated retraining and monitoring.</p>
             <div class="tech-tags"><span class="tag">PyTorch</span><span class="tag">Transformers</span><span class="tag">Docker</span><span class="tag">MLflow</span><span class="tag">GCP</span><span class="tag">FastAPI</span></div>
@@ -620,7 +620,7 @@
             <h3 data-lang="sr" class="active">Sistem za detekciju anomalija u realnom vremenu</h3>
             <h3 data-lang="en">Real-time Anomaly Detection System</h3>
             <p data-lang="sr" class="active">
-              Pratimo tokove podataka uživo i odmah javljamo kada nešto “nije kao obično”.
+              Pratimo tokove podataka uživo i odmah javljamo kada nešto “nije očekivano”. 
               Time se problemi hvataju pre zastoja i gubitaka — manje incidenta, manje troškova.
             </p>
             <p data-lang="en">Scalable ML system for detecting anomalies in streaming data with automated alerting and model drift monitoring using Evidently AI.</p>
@@ -659,8 +659,8 @@
             <h3 data-lang="sr" class="active">Prediktivno planiranje potražnje</h3>
             <h3 data-lang="en">Intelligent Demand Forecasting for Retail</h3>
             <p data-lang="sr" class="active">
-              Prognoziramo potražnju po proizvodu i prodavnici, nedelju po nedelju.
-              Nabavka naručuje tačno koliko treba, police su pune — manje viškova i rasprodaja, veći prihod.
+              Prognoziramo potražnju po proizvodu i prodavnici, nedelju po nedelju. 
+              Nabavka naručuje tačno koliko treba, police su pune — manje viška i rasprodaje, veći prihod.
             </p>
             <p data-lang="en">A deep learning model that predicts product demand and pricing trends for retail chains using historical and seasonal data.</p>
             <div class="tech-tags"><span class="tag">TensorFlow</span><span class="tag">Prophet</span><span class="tag">Pandas</span><span class="tag">BigQuery</span><span class="tag">GCP</span><span class="tag">Looker Studio</span></div>
